bastion_admin_SG.tf
resource "aws_security_group" "admin-bastion" {
name          = "bastion-host"
description   = "ssh login into bastion host"
vpc_id        = aws_vpc.main.id
ingress {
description   = "ssh"
from_port     = 22
to_port       = 22
protocol      = "tcp"
cidr_blocks   = ["0.0.0.0/0"]
}
egress {
from_port     = 0
to_port       = 0
protocol      = "-1"
cidr_blocks   = ["0.0.0.0/0"]
}
tags = var.tags
}
